move likes related operations to a dedicated storage, service & controller